<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#00FFFF"
    android:orientation="vertical" android:gravity="center_horizontal">

    <ImageView android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/structs"
        android:layout_margin="48dip">

    </ImageView>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Usuario"
        android:textSize="40px"
        android:gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_usuario"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contraseniaa"
        android:textSize="40px"
        android:gravity="center"


        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_contrasenia"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_entrar"
        android:text="@string/Entrar"
        android:onClick="onButtonClick"
        android:textColor="@color/colorNegro" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse1"
        android:id="@+id/btn_ingresa"
        android:onClick="onButtonClick"
        android:textColor="@color/colorNegro"/>

</LinearLayout>
